# ViralForge

./: .env.example  .gitignore  .mcp.json  01-OVERVIEW.md  02-DATABASE.md  03-CONFIG-SCHEMAS.md  04-TOOLS-NEW.md  05-PRODUCER-AGENT.md  06-ANALYST-WATCHER.md  07-PROMPTS.md  08-DOCKER-DEPLOY.md  Dockerfile  PLANO-IMPLEMENTACAO-V3.md  PLANO_MESTRE_IA.md  PRD-V2-COMPLETO-VIRAL-VIDEO-AUTOMATION.md  PRD-VIRALFORGE-V3.md  README.md  STATUS-V3.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_mcp_server.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
database/: init.sql
migrations/: README  env.py
migrations/versions/: 20251225_add_semantic_analysis_columns.py  20251228_add_style_tables.py  20251228_add_v3_tables.py
src/: __init__.py
src/agents/: __init__.py  analyst_agent.py  competitor_intel_agent.py  performance_tracker_agent.py  producer_agent.py  scheduler_agent.py  strategist_agent.py  style_cloner_agent.py  trend_hunter_agent.py  watcher_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  dashboard.py  productions.py  profiles.py  strategies.py  videos.py
src/core/: __init__.py  database.py  telemetry.py
src/db/: __init__.py
src/db/models/: __init__.py  analysis.py  instagram.py  production.py  profile.py  strategy.py  style.py  tracking.py  trends.py  video.py
src/db/repositories/: __init__.py
src/mcp/: __init__.py  server.py
src/publishers/: __init__.py  base.py  instagram_publisher.py  tiktok_publisher.py  youtube_publisher.py
src/tasks/: __init__.py  analysis_tasks.py  celery_app.py  processing_tasks.py  production_tasks.py  scraping_tasks.py
src/tools/: __init__.py  budget_tools.py  competitor_tools.py  ffmpeg_tools.py  instagram_scraper.py  performance_tools.py  publishing_tools.py  scraping_tools.py  sheets_tools.py  storage_tools.py  style_tools.py  tiktok_scraper.py  tts_tools.py  twitter_scraper.py  veo_tools.py  whisper_tools.py  youtube_scraper.py
src/tools/video_downloader/: __init__.py  base.py  factory.py  (+3 more)
tests/: conftest.py  test_agents.py  test_agents_v3.py  test_api.py  test_models.py  test_publishers.py  test_scrapers.py
